syntax = "proto3";
option go_package = "github.com/shishir9159/kapetanios/proto";

message PrerequisitesExpiration {
  bool etcdStatus = 1;
  bool diskPressure = 2;
  string err = 3;
}

message Expiration {
  bool validCertificate = 1;
  repeated Certificate certificates = 2;
  repeated CertificateAuthority certificateAuthorities = 3;
}

message Certificate {
  string name = 1;
  string expires = 2;
  string residualTime = 3;
  string certificateAuthority = 4;
  string externallyManaged = 5;
}

message CertificateAuthority {
  string name = 1;
  string expires = 2;
  string residualTime = 3;
  string externallyManaged = 4;
}

message CertificateValidityResponse {
  bool responseReceived = 1;
}

service Validity {
  rpc ClusterHealthChecking(PrerequisitesExpiration) returns (CertificateValidityResponse);
  rpc ExpirationInfo(Expiration) returns (CertificateValidityResponse);
}